--- a/mywatchlist/templates/mywatchlist.html
+++ b/mywatchlist/templates/mywatchlist.html
@@ -6,11 +6,15 @@
 
   <h3>My Watchlist</h3>
 
-  <h5>Name: </h5>
-  <p>{{student_nama}}</p>
+  <p>Name: {{student_nama}}</p>
+  
+  <p>Student ID: {{student_id}}</p>
 
-  <h5>Student ID: </h5>
-  <p>{{student_id}}</p>
+  {% if number_watched > not_watched %}
+    <p>Selamat, kamu sudah banyak menonton!</p>
+  {% else %}
+    <p>Wah, kamu masih sedikit menonton!</p>
+  {% endif %}
 
   <table>
     <tr>
